--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+@ -1,129 +0,0 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +128,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.idea
+source
